2002-10-22  David Hyatt  <hyatt@apple.com>

	Get XML files closer.  An XML doc is at least made.  No
	parsing works yet though.
	
        * kwq/KWQKHTMLPartImpl.mm:
        (KWQKHTMLPartImpl::setPolicyBaseURL):
        * kwq/WebCoreBridge.h:
        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge setContentType:]):

2002-10-22  Chris Blumenberg  <cblu@apple.com>

	Fixed: 3023814 - contexual menus and dragging doesn't work for some images

	Added a innerNonSharedNode to NodeInfo that points to the node which is not shared by another node. In this case, the innerNonSharedNode is the image node not the area node.

        * khtml/rendering/render_frames.cpp:
        (RenderFrameSet::nodeAtPoint): call setInnerNonSharedNode
        * khtml/rendering/render_image.cpp:
        (RenderImage::nodeAtPoint): call setInnerNonSharedNode
        * khtml/rendering/render_object.cpp:
        (RenderObject::nodeAtPoint): call setInnerNonSharedNode
        * khtml/rendering/render_object.h:
        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge elementAtPoint:]): use the innerNonSharedNode

2002-10-22  David Hyatt  <hyatt@apple.com>

	Fix slashdot.  Make sure the KONQBLOCK hack just throws away
	margins at the tops and bottoms of kids.
	
        * khtml/css/html4.css:
        * khtml/rendering/render_flow.cpp:
        (RenderFlow::layoutBlockChildren):

2002-10-22  David Hyatt  <hyatt@apple.com>

	Fix for left-hand-side of wired.com.  A disturbingly basic
	bug.  I was applying a parent's margins to its children
	when collapsing, even if the parent had a border/padding set
	that should have separated it from its kids.
	
        * khtml/rendering/render_flow.cpp:
        (RenderFlow::layoutBlockChildren):

2002-10-22  David Hyatt  <hyatt@apple.com>

	Optimize my inline margin discarding to be smart about the
	case when the inline has a block and its beginning or
	end.  Fixes aintitcool.com.
	
        * khtml/rendering/render_flow.cpp:
        (RenderFlow::layoutBlockChildren):
