@@ -16,3 +16,4 @@ extern KWQLogChannel KWQLogNotYetImplemented;
 
 extern KWQLogChannel KWQLogFrames;
 extern KWQLogChannel KWQLogLoading;
+extern KWQLogChannel KWQLogPopupBlocking;
